starstream-to-wasm/tests/snapshots/inputs@utxo_nothing.star.snap
---
source: starstream-to-wasm/tests/snapshots.rs
input_file: starstream-to-wasm/tests/inputs/utxo_nothing.star
---
==== AST ====
Program {
    shebang: None,
    definitions: [
        Spanned {
            node: Utxo(
                UtxoDef {
                    name: Identifier {
                        name: "MyUtxo",
                        span: 5..11,
                    },
                    parts: [],
                },
            ),
            span: 0..16,
        },
    ],
}

==== Inference trace ====
T-Utxo: MyUtxo => 

==== Typed AST ====
TypedProgram {
    definitions: [
        Utxo(
            TypedUtxoDef {
                name: Identifier {
                    name: "MyUtxo",
                    span: 5..11,
                },
                parts: [],
                ty: UtxoType {
                    name: "MyUtxo",
                    id: NameId(4),
                    public_methods: [],
                    possible_abis: [],
                    always_abis: [],
                },
            },
        ),
    ],
}

==== Core WebAssembly ====
(module
  (type (;0;) (func (param i32)))
  (type (;1;) (func (param i32 i64 i64 i64 i64) (result i32)))
  (type (;2;) (func (param i32 i64 i64 i64 i64)))
  (type (;3;) (func (param i32) (result i32)))
  (type (;4;) (func))
  (type (;5;) (func (param i32 i32) (result i32)))
  (import "starstream:std/builtin" "[resource-drop]utxo" (func (;0;) (type 0)))
  (import "starstream:std/builtin" "[method]utxo.has-method" (func (;1;) (type 1)))
  (import "starstream:std/builtin" "[resource-drop]token" (func (;2;) (type 0)))
  (import "starstream:std/utxo-context" "[resource-drop]utxo-context" (func (;3;) (type 0)))
  (import "starstream:std/utxo-context" "[method]utxo-context.resume" (func (;4;) (type 0)))
  (import "starstream:std/utxo-context" "[method]utxo-context.implements-method" (func (;5;) (type 2)))
  (import "starstream:self/my-utxo" "[resource-drop]utxo" (func (;6;) (type 0)))
  (import "[export]my-utxo" "[resource-new]utxo" (func (;7;) (type 3)))
  (import "[export]my-utxo" "[resource-drop]utxo" (func (;8;) (type 0)))
  (global (;0;) (mut i32) (i32.const 0))
  (global (;1;) (mut i32) (i32.const 0))
  (export "my-utxo#get-storage" (func 10))
  (export "my-utxo#set-storage" (func 11))
  (func (;9;) (type 4)
    (call 4
      (global.get 1))
    (unreachable)
  )
  (func (;10;) (type 3) (param i32) (result i32)
    (global.get 0)
  )
  (func (;11;) (type 5) (param i32 i32) (result i32)
    (global.set 1
      (local.get 0))
    (global.set 0
      (local.get 1))
    (return
      (call 7
        (i32.const 0)))
  )
  (@custom "component-type"
    (component
      (@custom "wit-component-encoding" "\04\00")
      (type (;0;)
        (component
          (type (;0;)
            (component
              (type (;0;)
                (instance
                  (export (;0;) "utxo" (type (sub resource)))
                  (type (;1;) (borrow 0))
                  (type (;2;) (own 0))
                  (type (;3;) (tuple u64 u64 u64 u64))
                  (type (;4;) (func (param "self" 1) (param "hash" 3) (result bool)))
                  (export (;0;) "[method]utxo.has-method" (func (type 4)))
                  (export (;5;) "token" (type (sub resource)))
                  (type (;6;) (borrow 5))
                  (type (;7;) (own 5))
                )
              )
              (import "starstream:std/builtin" (instance (;0;) (type 0)))
              (alias export 0 "utxo" (type (;1;)))
              (import "s-utxo" (type (;2;) (eq 1)))
              (type (;3;) (borrow 2))
              (type (;4;) (own 2))
              (alias export 0 "token" (type (;5;)))
              (import "s-token" (type (;6;) (eq 5)))
              (type (;7;) (borrow 6))
              (type (;8;) (own 6))
              (type (;9;)
                (instance
                  (export (;0;) "utxo-context" (type (sub resource)))
                  (type (;1;) (borrow 0))
                  (type (;2;) (own 0))
                  (type (;3;) (func (param "self" 1)))
                  (export (;0;) "[method]utxo-context.resume" (func (type 3)))
                  (type (;4;) (tuple u64 u64 u64 u64))
                  (type (;5;) (func (param "self" 1) (param "hash" 4)))
                  (export (;1;) "[method]utxo-context.implements-method" (func (type 5)))
                )
              )
              (import "starstream:std/utxo-context" (instance (;1;) (type 9)))
              (alias export 1 "utxo-context" (type (;10;)))
              (import "s-utxo-context" (type (;11;) (eq 10)))
              (type (;12;) (borrow 11))
              (type (;13;) (own 11))
              (type (;14;)
                (instance
                  (export (;0;) "utxo" (type (sub resource)))
                  (type (;1;) (borrow 0))
                  (type (;2;) (own 0))
                )
              )
              (import "starstream:self/my-utxo" (instance (;2;) (type 14)))
              (alias export 2 "utxo" (type (;15;)))
              (import "u-my-utxo" (type (;16;) (eq 15)))
              (type (;17;) (borrow 16))
              (type (;18;) (own 16))
              (type (;19;)
                (instance
                  (export (;0;) "utxo" (type (sub resource)))
                  (type (;1;) (borrow 0))
                  (type (;2;) (own 0))
                  (type (;3;) (record (field "yield" s32)))
                  (export (;4;) "storage" (type (eq 3)))
                  (type (;5;) (func (param "self" 1) (result 4)))
                  (export (;0;) "get-storage" (func (type 5)))
                  (alias outer 1 10 (type (;6;)))
                  (export (;7;) "s-utxo-context" (type (eq 6)))
                  (type (;8;) (borrow 7))
                  (type (;9;) (own 7))
                  (type (;10;) (func (param "ctx" 9) (param "storage" 4) (result 2)))
                  (export (;1;) "set-storage" (func (type 10)))
                )
              )
              (export (;3;) "my-utxo" (instance (type 19)))
            )
          )
          (export (;0;) "my-namespace:my-package/my-world" (component (type 0)))
        )
      )
      (export (;1;) "x" (type 0))
    )
  )
)

==== WIT ====
package root:component;

world root {
  import starstream:std/builtin;
  import starstream:std/utxo-context;
  import starstream:self/my-utxo;
  use starstream:std/builtin.{utxo as s-utxo, token as s-token};
  use starstream:std/utxo-context.{utxo-context as s-utxo-context};
  use starstream:self/my-utxo.{utxo as u-my-utxo};

  export my-utxo: interface {
    use starstream:std/utxo-context.{utxo-context as s-utxo-context};

    resource utxo;

    record storage {
      yield: s32,
    }

    get-storage: func(self: borrow<utxo>) -> storage;

    set-storage: func(ctx: s-utxo-context, storage: storage) -> utxo;
  }
}
package starstream:std {
  interface builtin {
    resource utxo {
      has-method: func(hash: tuple<u64, u64, u64, u64>) -> bool;
    }

    resource token;
  }
  interface utxo-context {
    resource utxo-context {
      resume: func();
      implements-method: func(hash: tuple<u64, u64, u64, u64>);
    }
  }
}


package starstream:self {
  interface my-utxo {
    resource utxo;
  }
}
